--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker Build and Push
 
 on:
   push:
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Login to Docker Hub
@@ -25,10 +25,5 @@ jobs:
         with:
           context: .
           push: true
-          # Replace 'your-dockerhub-username' with your actual Docker Hub username in the line below manually
-          # or better yet, rely on the user following instructions to set the image name.
-          # For this template, we assume the user will set a secret or edit this file.
-          # To make it easiest, we use the github repository name as the image name if possible, 
-          # but for Docker Hub, it must be namespace/repo. 
-          # Let's use the variable: ${{ secrets.DOCKER_USERNAME }}/lingua-cards:latest
+          # ربات به طور خودکار نام کاربری شما را از سیکرت می خواند
           tags: ${{ secrets.DOCKER_USERNAME }}/lingua-cards:latest
